--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,16 @@ body{
     background-image: url("../images/bgrps.gif");
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: top 5%  center;
+    background-position: bottom 50%  center;
+    width: 100%;
+    height: 100vh;
 }
 
 h1{
     text-align: center;
     font-size: 55px;
-    padding: 24px 0;
+    font-weight: bold;
+    padding: 32px 0;
+
     
 }
